# PicoJig

./: README.md  Release Notes[eng].txt  Release Notes[jpn].txt  [eng]Release Notes.txt  [jpn]Release Notes.txt  リリースノート.txt
FW/: PicoJig_20240702.uf2  PicoJig_20240703.uf2  PicoJig_20240704.uf2  PicoJig_24050100.uf2  PicoJig_WL_20240702.uf2  PicoJig_WL_20240703.uf2  PicoJig_WL_20240704.uf2  PicoJig_WL_20240705.uf2  PicoJig_WL_24052600.uf2
JigApp/: JigApp.sln
JigApp/JigApp/: Common.cs  FormAdc.Designer.cs  FormAdc.cs  FormGpio.Designer.cs  FormI2c.cs  FormMain.cs  FormNwConfig.cs  FormSpi.Designer.cs  FormUart.Designer.cs  FormUart.cs  app.manifest
JigApp/JigApp/JigCmd/: JigCmd_Common.cs  JigCmd_Send.cs
docs/en/: 04_FW_Build_Guide.txt  05_Release_Notes.txt
docs/ja/: 04_FWビルド方法.txt  05_リリースノート.txt
src_app/JigApp/: JigApp.sln
src_fw/: How to build[eng].txt  How to build[jpn].txt  [jpn]How to build.txt  ビルド方法.txt
src_fw/PicoJig/: Adc.c  Adc.h  CMakeLists.txt  Cmd.c  Cmd.h  Common.c  Common.h  Flash.c  Flash.h  Frame.c  Frame.h  Gpio.c  Gpio.h  I2c.c  I2c.h  Pwm.c  Pwm.h  Spi.c  Spi.h  TcpServer.c  TcpServer.h  Timer.c  Timer.h  Type.h  Uart.c  Uart.h  Ver.h  lwipopts.h  lwipopts_examples_common.h  main.c
src_fw/pico-sdk-1.5.1_replace/: stdio_usb.c
src_fw/pico/PicoJig/PicoJig/: Adc.c  Adc.h  CMakeLists.txt  Cmd.c  Cmd.h  Common.c  Common.h  Flash.c  Flash.h  Frame.c  Frame.h  Gpio.c  Gpio.h  I2c.c  I2c.h  Pwm.c  Pwm.h  Spi.c  Spi.h  TcpServer.c  TcpServer.h  Timer.c  Timer.h  Type.h  Uart.c  Uart.h  Ver.h  lwipopts_examples_common.h  main.c
(+59 files in other folders)
